本次 RBAC 改造总结改了什么： JWT只存userld +username，不存roleKeys每次请求从DB/Redis 查角色(实时生效) @Cacheable 缓存roles 和 permissions(2小时 TTL)改角色/改菜单时 @CacheEvict 主动清缓存 禁用角色自动过滤 /admin/user/permissions接口返回用户专属菜单树